<resources>
    <string name="app_name">Flux</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="main_widget_description">Bar chart</string>
    <string name="list_widget_description">List</string>
    <string name="welcome_text">Welcome to Flux!</string>
    <string name="chart_bars">Bar</string>
    <string name="chart_graph">Smooth</string>
    <string name="chart_lines">Exact</string>
    <string name="current_price_label">Current price</string>
    <string name="current_price_loading">Loading current price...</string>
    <string name="current_price_placeholder">--</string>
    <string name="current_price_unavailable">Price unavailable</string>
    <string name="price_error_offline_title">No internet connection</string>
    <string name="price_error_offline_message">Connect to the internet and try again to load the latest electricity prices.</string>
    <string name="price_error_service_title">Prices couldn\'t be loaded</string>
    <string name="price_error_service_message">The price service isn\'t responding right now. Try again in a moment.</string>
    <string name="price_error_retry">Try again</string>
    <string name="price_error_retrying">Trying again…</string>
    <string name="current_price_details_label_time">Active</string>
    <string name="current_price_details_label_price">Price</string>
    <string name="current_price_details_label_original">Original</string>
    <string name="current_price_details_label_exchange_rate">Exchange rate</string>
    <string name="current_price_details_value_exact">%1$s %2$s</string>
    <string name="current_price_details_value_original">%1$s EUR/kWh</string>
    <string name="current_price_details_value_exchange_rate">1 EUR = %1$s %2$s</string>
    <string name="average_yesterday_label">Yesterday</string>
    <string name="average_today_label">Today</string>
    <string name="average_tomorrow_label">Tomorrow</string>
    <string name="average_label">Average</string>
    <string name="average_unavailable_short">No data</string>
    <string name="average_loading">Loading</string>
    <string name="average_min_format">%1$s</string>
    <string name="average_max_format">%1$s</string>
    <string name="average_min_placeholder">--</string>
    <string name="average_max_placeholder">--</string>
    <string name="average_details_density_15_minutes">15 min</string>
    <string name="average_details_density_30_minutes">30 min</string>
    <string name="average_details_density_hourly">Hourly</string>
    <string name="tomorrow_average_pending">Arriving by 14:00</string>
    <string name="configuration_label">Configuration</string>
    <string name="price_settings_title">Price settings</string>
    <string name="country_label">Country</string>
    <string name="region_label">Region</string>
    <string name="price_display_label">Price display</string>
    <string name="swiss_price_unit_rappen">Rp./kWh</string>
    <string name="swiss_price_unit_centimes">ct/kWh</string>
    <string name="stromstotte_label">Str&#248;mst&#248;tte</string>
    <string name="vat_label">VAT</string>
    <string name="grid_fee_label">Grid fee</string>
    <string name="y_axis_label">Y-axis</string>
    <string name="stromstotte_info_title">Str&#248;mst&#248;tte</string>
    <string name="stromstotte_info_message">Reduces the part of the spot price above 0.77 kr/kWh by 90 percent before VAT and grid fee are added.</string>
    <string name="vat_info_title">VAT</string>
    <string name="vat_info_message">Adds the current VAT or energy tax rate (%1$s percent) to the spot price before the grid fee is added.</string>
    <string name="grid_fee_info_title">Grid fee</string>
    <string name="grid_fee_info_message">Adds a fixed surcharge to every displayed kWh price.</string>
    <string name="main_bar_pool_info_title">Bar pooling</string>
    <string name="main_bar_pool_info_message">Prices come in 15-minute intervals, but the main chart shows one bar per hour. Choose whether each hourly bar should use the minimum, average, or maximum of those four prices.</string>
    <string name="about_button_label">About Flux</string>
    <string name="about_version_format">Version %1$s</string>
    <string name="about_description">Flux is developed by me, Simon Halvdansson, but has to a large part been an experiment in agentic coding with Codex. Work started in early 2025 but I had been thinking about this project mainly as a widget since 2022.\n\nElectricity data is fetched from ENTSO-E using a GitHub action which runs every hour and is also open source.</string>
    <string name="about_libraries_title">Libraries</string>
    <string name="about_library_material">&#8226; Material Components by Google</string>
    <string name="about_library_androidx_core">&#8226; AndroidX Core KTX by Google</string>
    <string name="about_library_okhttp">&#8226; OkHttp by Square</string>
    <string name="about_flux_github_button">Flux on GitHub</string>
    <string name="about_entsoe_mirror_github_button">ENTSOE-Mirror on GitHub</string>
    <string name="about_flux_github_url">https://github.com/SimonHalvdansson/Flux</string>
    <string name="about_entsoe_mirror_github_url">https://github.com/SimonHalvdansson/ENTSOE-Mirror</string>
    <string name="main_chart_mode_title">Display mode</string>
    <string name="main_bar_pool_title">Bar pooling</string>
    <string name="widget_settings_title">Widget settings</string>
    <string name="main_widget_settings_title">Chart widget</string>
    <string name="list_widget_settings_title">List widget</string>
    <string name="widget_chart_mode_title">Display mode</string>
    <string name="widget_bar_pool_title">Pool hourly bars by</string>
    <string name="widget_list_increment_title">Increment size</string>
    <string name="widget_list_pool_title">Pool prices by</string>
    <string name="pool_average">Average</string>
    <string name="pool_min">Min</string>
    <string name="pool_max">Max</string>
    <string name="increment_15_minutes">15m</string>
    <string name="increment_30_minutes">30m</string>
    <string name="increment_1_hour">1h</string>
    <string name="increment_2_hours">2h</string>
    <string name="done">Done</string>
</resources>
