<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="28dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="top"
                android:layout_marginEnd="16dp"
                android:contentDescription="@null"
                android:importantForAccessibility="no"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/productsans_bold"
                    android:text="@string/app_name"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/about_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:fontFamily="@font/productsans_bold"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/productsans_medium"
            android:lineSpacingExtra="3dp"
            android:text="@string/about_description"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/productsans_bold"
            android:letterSpacing="0.08"
            android:text="@string/about_libraries_title"
            android:textAllCaps="true"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/productsans_medium"
            android:text="@string/about_library_material"
            android:textColor="?attr/colorOnSurface"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/productsans_medium"
            android:text="@string/about_library_androidx_core"
            android:textColor="?attr/colorOnSurface"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/productsans_medium"
            android:text="@string/about_library_okhttp"
            android:textColor="?attr/colorOnSurface"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>
