<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:id="@+id/current_price_details_original_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/productsans_medium"
            android:text="@string/current_price_details_label_original"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/current_price_details_original_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/productsans_medium"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/current_price_details_exchange_rate_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/productsans_medium"
            android:text="@string/current_price_details_label_exchange_rate"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/current_price_details_exchange_rate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/productsans_medium"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/current_price_details_price_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/productsans_medium"
            android:text="@string/current_price_details_label_price"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/current_price_details_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/productsans_medium"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/current_price_details_time_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/productsans_medium"
            android:text="@string/current_price_details_label_time"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/current_price_details_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/productsans_medium"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
